# backend/app/Http/Controllers/UserController.php
@@ -12,6 +12,6 @@ class UserController extends Controller
      */
     public function index()
     {
-        return response()->json(User::all());
+        return response()->json(User::with('department')->get());
     }
 }
